# KannaChan

./: .gitignore  Cargo.toml  build.rs
src/: arguments.rs  client.rs  configs.rs  main.rs
src/anilist/: anime.rs  get_media.graphql  mod.rs
src/aoba/: image.rs  mod.rs
src/commands/: login.rs  mod.rs
src/commands/anime/: add.rs  get.rs  get_info.rs  mod.rs  search.rs
src/commands/auth/: login.rs  mod.rs  recover.rs
src/commands/episodes/: add.rs  mod.rs
src/commands/source/: add.rs  mod.rs
src/commands/utils/: encode.rs  mod.rs
src/models/: anime.rs  genres.rs  mod.rs  search_table.rs  season.rs  user.rs
src/models/anime/: mod.rs
src/models/arkalis/: anime_lists.rs  anime_request.rs  mod.rs  title.rs
