[package]
name = "kanna-chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
figment = { version = "0.10.15", features = ["env", "toml", "json"] }
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
], default-features = false }
clap = { version = "4.5.3", features = ["derive"] }
# open = "5.1.1"
scanln = "0.1.1"
toml = "0.8.12"
tonic = "0.11.0"
prost = "0.12.3"
anyhow = "1.0.81"
lazy_static = "1.4.0"
graphql_client = { version = "0.14.0", features = ["reqwest-rustls", "reqwest-blocking"] }
chrono = "0.4.35"
tabled = "0.15.0"
bitflags = "2.5.0"
async-recursion = "1.1.0"
env_logger = "0.11.3"
log = "0.4.21"
arkalis-commons = { git = "https://github.com/ProjectArkalis/ArkalisCommons" }

[build-dependencies]
tonic-build = "0.11"
