[package]
name = "kanna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
figment = { version = "0.10.16", features = ["env", "toml", "json"] }
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
], default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
# open = "5.1.1"
toml = "0.8.12"
anyhow = "1.0.82"
lazy_static = "1.4.0"
graphql_client = { version = "0.14.0", features = [
    "reqwest-rustls",
    "reqwest-blocking",
] }
chrono = "0.4.37"
tabled = "0.15.0"
bitflags = "2.5.0"
async-recursion = "1.1.0"
log = "0.4.21"
kanna-commons = { git = "https://github.com/ProjectArkalis/KannaCommons", rev = "3c2dbc713388fd10c6a232d610302a9ec1205c79", features = [
    "enum",
] }
# kanna-commons = { path = "/home/yummi/CodigosFodas/KannaCommons", features = ["enum"]}
dirs = "5.0.1"
glob = "0.3.1"
